@@ -1,0 +1,3 @@
+These are third party scripts.
+They are provided AS-IS, the original author and
+license are included in each source file.
